# physmech

./: .clang-format  .gitignore  CMakeLists.txt
Navier-Stokes/: CMakeLists.txt
Report_1/: otchet.tex
TVD/: .main.cpp.swp  CMakeLists.txt  SolverUtils.cpp  SolverUtils.hpp  main.cpp
eqTransFirstAccur/: CMakeLists.txt  UpWind.cpp
eqTransSecondAccur/: CMakeLists.txt  Cheharda.cpp  KrankNick.cpp  LaksWendorff.cpp
libs/: CMakeLists.txt
libs/include/: AmgclSolver.hpp  CsrMatrix.hpp
libs/src/: AmgclSolver.cpp  CsrMatrix.cpp
